--- a/paper/paper-refs.bib
+++ b/paper/paper-refs.bib
@@ -298,6 +298,24 @@ doi = {10.7717/peerj-cs.23}
   publisher={Cold Spring Harbor Laboratory Press}
 }
 
+@book{sayood2017introduction,
+  title={Introduction to data compression},
+  author={Sayood, Khalid},
+  year={2017},
+  publisher={Morgan Kaufmann}
+}
+
+@article{pinho2013mfcompress,
+  title={{MFCompress: a compression tool for FASTA and multi-FASTA data}},
+  author={Pinho, Armando J and Pratas, Diogo},
+  journal={Bioinformatics},
+  volume={30},
+  number={1},
+  pages={117--118},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
 
 
 
