--- a/paper/paper-refs.bib
+++ b/paper/paper-refs.bib
@@ -316,8 +316,27 @@ doi = {10.7717/peerj-cs.23}
   publisher={Oxford University Press}
 }
 
+@article{ochiai2005genome,
+  title={Genome sequence of \textit{Xanthomonas oryzae} pv. \textit{oryzae} suggests contribution of large numbers of effector genes and insertion sequences to its race diversity},
+  author={Ochiai, Hirokazu and Inoue, Yasuhiro and Takeya, Masaru and Sasaki, Aeni and Kaku, Hisatoshi},
+  journal={Japan Agricultural Research Quarterly: JARQ},
+  volume={39},
+  number={4},
+  pages={275--287},
+  year={2005},
+  publisher={Japan International Research Center for Agricultural Sciences}
+}
 
-
+@article{salzberg2008genome,
+  title={Genome sequence and rapid evolution of the rice pathogen \textit{Xanthomonas oryzae} pv. \textit{oryzae} PXO99A},
+  author={Salzberg, Steven L and Sommer, Daniel D and Schatz, Michael C and Phillippy, Adam M and Rabinowicz, Pablo D and Tsuge, Seiji and Furutani, Ayako and Ochiai, Hirokazu and Delcher, Arthur L and Kelley, David and others},
+  journal={BMC genomics},
+  volume={9},
+  number={1},
+  pages={204},
+  year={2008},
+  publisher={BioMed Central}
+}
 
 
 
