--- a/paper/main.tex
+++ b/paper/main.tex
@@ -399,10 +399,11 @@ Smash++ and several other methods have been carried out on a collection of synth
   \label{fig.synth}
 \end{figure*}
 
+conforms to \cite{salzberg2008genome}
 \begin{figure*}[!h]
   \centering
   \includegraphics[width=\linewidth]{Drawing1.pdf}
-  \caption{real.}
+  \caption{PXO99A - MAFF 311018.}
   \label{fig.PXO99A.MAFF311018}
 \end{figure*}
 
