--- a/paper/main.tex
+++ b/paper/main.tex
@@ -402,7 +402,7 @@ Smash++ and several other methods have been carried out on a collection of synth
 conforms to \cite{salzberg2008genome}
 \begin{figure*}[!h]
   \centering
-  \includegraphics[width=\linewidth]{Drawing1.pdf}
+  \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
   \caption{PXO99A - MAFF 311018.}
   \label{fig.PXO99A.MAFF311018}
 \end{figure*}
@@ -443,25 +443,28 @@ A list of available scientific research data repositories can be found in \href{
 AML:~acute myeloid leukemia; CMT:~Charcot–Marie–Tooth; CMLS:~Count-Min-Log Sketch; CPU:~central processing unit; FCM:~finite-context model; GB:~gigabyte; GHz:~gigahertz; HTS:~high-throughput sequencing; KB:~kilobyte; MB:~megabyte; RAM:~random access memory; PMP22:~peripheral myelin protein 22; PRNG:~pseudo-random number generator; STMM:~substitutional tolerant Markov model; SVG:~Scalable Vector Graphics; UI:~user interface; WHS:~Wolf–Hirschhorn syndrome.
 
 
-\subsection{Ethical Approval (optional)}
-Manuscripts reporting studies involving human participants, human data or human tissue must:
+\subsection{Ethical Approval}
+Not applicable.
 
-\begin{itemize}
-\item include a statement on ethics approval and consent (even where the need for approval was waived)
-\item include the name of the ethics committee that approved the study and the committee's reference number if appropriate
-\end{itemize}
+% Manuscripts reporting studies involving human participants, human data or human tissue must:
 
-Studies involving animals must include a statement on ethics approval and have been treated in a humane manner in line with the \href{http://www.nc3rs.org.uk/arrive-guidelines}{ARRIVE guidelines}.
+% \begin{itemize}
+% \item include a statement on ethics approval and consent (even where the need for approval was waived)
+% \item include the name of the ethics committee that approved the study and the committee's reference number if appropriate
+% \end{itemize}
 
-See our \href{https://academic.oup.com/gigascience/pages/editorial_policies_and_reporting_standards}{editorial policies} for more information.
+% Studies involving animals must include a statement on ethics approval and have been treated in a humane manner in line with the \href{http://www.nc3rs.org.uk/arrive-guidelines}{ARRIVE guidelines}.
 
-If your manuscript does not report on or involve the use of any animal or human data or tissue, this section is not applicable to your submission. Please state ``Not applicable'' in this section.
+% See our \href{https://academic.oup.com/gigascience/pages/editorial_policies_and_reporting_standards}{editorial policies} for more information.
+
+% If your manuscript does not report on or involve the use of any animal or human data or tissue, this section is not applicable to your submission. Please state ``Not applicable'' in this section.
 
 \subsection{Consent for publication}
+Not applicable.
 
-If your manuscript contains any individual person's data in any form, consent to publish must be obtained from that person, or in the case of children, their parent or legal guardian. All presentations of case reports must have consent to publish. You can use your institutional consent form. You should not send the form to us on submission, but we may request to see a copy at any stage (including after publication). Please also confirm you have followed national guidelines on data collection and release in the place the research was carried out, for example confirming you have Ministry of Science and Technology (MOST) approval in China.
+% If your manuscript contains any individual person's data in any form, consent to publish must be obtained from that person, or in the case of children, their parent or legal guardian. All presentations of case reports must have consent to publish. You can use your institutional consent form. You should not send the form to us on submission, but we may request to see a copy at any stage (including after publication). Please also confirm you have followed national guidelines on data collection and release in the place the research was carried out, for example confirming you have Ministry of Science and Technology (MOST) approval in China.
 
-If your manuscript does not contain any individual person's data, please state ``Not applicable'' in this section.
+% If your manuscript does not contain any individual person's data, please state ``Not applicable'' in this section.
 
 \subsection{Competing Interests}
 The authors declare that they have no competing interests.
@@ -476,22 +479,17 @@ This work was supported by Programa Operacional Factores de Competitividade -- C
 The individual contributions of authors to the manuscript should be specified in this section. Guidance and criteria for authorship can be found in our \href{https://academic.oup.com/gigascience/pages/editorial_policies_and_reporting_standards}{editorial policies}. We would recommend you follow some kind of standardised taxonomy like the \href{http://docs.casrai.org/CRediT}{CASRAI CRediT} (Contributor Roles Taxonomy).
 
 
-\section{Acknowledgements}
+% \section{Acknowledgements}
 
-Please acknowledge anyone who contributed towards the article who does not meet the criteria for authorship including anyone who provided professional writing services or materials.
+% Please acknowledge anyone who contributed towards the article who does not meet the criteria for authorship including anyone who provided professional writing services or materials.
 
-Authors should obtain permission to acknowledge from all those mentioned in the Acknowledgements section. If you do not have anyone to acknowledge, please write ``Not applicable'' in this section.
+% Authors should obtain permission to acknowledge from all those mentioned in the Acknowledgements section. If you do not have anyone to acknowledge, please write ``Not applicable'' in this section.
 
-See our \href{https://academic.oup.com/gigascience/pages/editorial_policies_and_reporting_standards}{editorial policies} for a full explanation of acknowledgements and authorship criteria.
+% See our \href{https://academic.oup.com/gigascience/pages/editorial_policies_and_reporting_standards}{editorial policies} for a full explanation of acknowledgements and authorship criteria.
 
-Group authorship: if you would like the names of the individual members of a collaboration group to be searchable through their individual PubMed records, please ensure that the title of the collaboration group is included on the title page and in the submission system and also include collaborating author names as the last paragraph of the “Acknowledgements” section. Please add authors in the format First Name, Middle initial(s) (optional), Last Name. You can add institution or country information for each author if you wish, but this should be consistent across all authors.
+% Group authorship: if you would like the names of the individual members of a collaboration group to be searchable through their individual PubMed records, please ensure that the title of the collaboration group is included on the title page and in the submission system and also include collaborating author names as the last paragraph of the “Acknowledgements” section. Please add authors in the format First Name, Middle initial(s) (optional), Last Name. You can add institution or country information for each author if you wish, but this should be consistent across all authors.
 
-Please note that individual names may not be present in the PubMed record at the time a published article is initially included in PubMed as it takes PubMed additional time to code this information.
-
-\section{Authors' information (optional)}
-
-You may choose to use this section to include any relevant information about the author(s) that may aid the reader's interpretation of the article, and understand the standpoint of the author(s). This may include details about the authors' qualifications, current positions they hold at institutions or societies, or any other relevant background information. Please refer to authors using their initials. Note this section should not be used to describe any competing interests.
-
+% Please note that individual names may not be present in the PubMed record at the time a published article is initially included in PubMed as it takes PubMed additional time to code this information.
 
 
 %% Specify your .bib file name here, without the extension
