--- a/paper/main.tex
+++ b/paper/main.tex
@@ -376,8 +376,8 @@ This example shows the distinction between a finite-context model and a substitu
     \midrule
     Real data \\
     \cmidrule{1-4}
-    \textit{Ref}: PXO99A\textsuperscript{b} & 5,238,555 & 70 & Bacteria & \textit{Xanthomonas oryzae} pv. \textit{oryzae} causes the major disease of bacterial blight of rice (\textit{Oryza sativa L.}). PXO99A strain is a 5-azacytidine-resistant derivative of PXO99, which was isolated in Los Baños and classified as Philippine race 6. PXO99A is virulent toward a large number of rice varieties representing diverse genetic sources of resistance~\cite{salzberg2008genome}. \\
-    \textit{Tar}: MAFF 311018\textsuperscript{c} & 4,940,217 & 70 & Bacteria & It is a Japanese race 1 strain~\cite{ochiai2005genome}. \\
+    \textit{Ref}: PXO99A\textsuperscript{b} & 5,238,555 & 70 & Bacteria & \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} causes the major disease of bacterial blight of rice (\textit{Oryza sativa L.}). \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} PXO99A strain is a 5-azacytidine-resistant derivative of PXO99, which was isolated in Los Baños and classified as Philippine race 6. PXO99A is virulent toward a large number of rice varieties representing diverse genetic sources of resistance~\cite{salzberg2008genome}. \\
+    \textit{Tar}: MAFF 311018\textsuperscript{c} & 4,940,217 & 70 & Bacteria & \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} MAFF~311018 is a Japanese race 1 strain~\cite{ochiai2005genome}. \\
     \midrule
     \bottomrule
   \end{tabularx}
