--- a/paper/main.tex
+++ b/paper/main.tex
@@ -399,7 +399,7 @@ Smash++ and several other methods have been carried out on a collection of synth
   \label{fig.synth}
 \end{figure*}
 
-conforms to \cite{salzberg2008genome}
+Figure~\ref{fig.PXO99A.MAFF311018} conforms to \cite{salzberg2008genome}
 \begin{figure*}[!h]
   \centering
   \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
