--- a/paper/main.tex
+++ b/paper/main.tex
@@ -387,6 +387,9 @@ This example shows the distinction between a finite-context model and a substitu
     \midrule
     \textit{Ref}: GGA18 & 11,373,140 & CM000110 & Animalia & \textit{Gallus gallus} chromosome 18. \\
     \textit{Tar}: MGA20 & 10,730,484 & CM000981 & Animalia & \textit{Meleagris gallopavo} chromosome 20. \\
+    \midrule
+    \textit{Ref}: GGA14 & 16,219,308 & CM000106 & Animalia & \textit{Gallus gallus} chromosome 14. \\
+    \textit{Tar}: MGA16 & 14,878,991 & CM000977 & Animalia & \textit{Meleagris gallopavo} chromosome 16. \\
     \bottomrule
   \end{tabularx}
 
@@ -447,8 +450,7 @@ A list of available scientific research data repositories can be found in \href{
 \section{Declarations}
 
 \subsection{List of abbreviations}
-AML:~acute myeloid leukemia; CMT:~Charcot–Marie–Tooth; CMLS:~Count-Min-Log Sketch; CPU:~central processing unit; FCM:~finite-context model; GB:~gigabyte; GHz:~gigahertz; HTS:~high-throughput sequencing; KB:~kilobyte; MB:~megabyte; RAM:~random access memory; PMP22:~peripheral myelin protein 22; PRNG:~pseudo-random number generator; STMM:~substitutional tolerant Markov model; SVG:~Scalable Vector Graphics; UI:~user interface; WHS:~Wolf–Hirschhorn syndrome.
-
+AML:~acute myeloid leukemia; CMT:~Charcot–Marie–Tooth; CMLS:~Count-Min-Log Sketch; CPU:~central processing unit; FCM:~finite-context model; GB:~gigabyte; GGA:~\textit{Gallus gallus}; GHz:~gigahertz; HTS:~high-throughput sequencing; KB:~kilobyte; MB:~megabyte; MGA:~\textit{Meleagris gallopavo}; RAM:~random access memory; PMP22:~peripheral myelin protein 22; PRNG:~pseudo-random number generator; STMM:~substitutional tolerant Markov model; SVG:~Scalable Vector Graphics; UI:~user interface; WHS:~Wolf–Hirschhorn syndrome.
 
 \subsection{Ethical Approval}
 Not applicable.
