--- a/paper/main.tex
+++ b/paper/main.tex
@@ -404,6 +404,13 @@ Smash++ and several other methods have been carried out on a collection of synth
 
 \begin{figure*}[!h]
   \centering
+  \includegraphics[width=\linewidth]{fig/permute.pdf}
+  \caption{Permutation.}
+  \label{fig.permute}
+\end{figure*}
+
+\begin{figure*}[!h]
+  \centering
   \includegraphics[width=\linewidth]{fig/synth.pdf}
   \caption{synthetic.}
   \label{fig.synth}
