--- a/paper/main.tex
+++ b/paper/main.tex
@@ -433,6 +433,13 @@ Smash++ and several other methods have been carried out on a collection of synth
 
 \begin{figure*}[!h]
   \centering
+  \includegraphics[width=\linewidth]{fig/compare_smash.pdf}
+  \caption{Compare Smash.}
+  \label{fig.compare.smash}
+\end{figure*}
+
+\begin{figure*}[!h]
+  \centering
   \includegraphics[width=\linewidth]{fig/synth.pdf}
   \caption{synthetic.}
   \label{fig.synth}
