--- a/paper/main.tex
+++ b/paper/main.tex
@@ -424,16 +424,16 @@ This example shows the distinction between a finite-context model and a substitu
 \section{Results} \label{sec.results}
 Smash++ and several other methods have been carried out on a collection of synthetic and real sequences. The machine used for the tests had a 4-core 3.40~GHz Intel\textsuperscript{\textregistered} Core{\texttrademark} i7-6700 CPU and 32~GB of RAM.
 
-\begin{figure*}[!h]
-  \centering
-  \includegraphics[width=\linewidth]{fig/permute.pdf}
-  \caption{Permutation.}
-  \label{fig.permute}
-\end{figure*}
+% \begin{figure*}[!h]
+%   \centering
+%   \includegraphics[width=\linewidth]{fig/permute.pdf}
+%   \caption{Permutation.}
+%   \label{fig.permute}
+% \end{figure*}
 
 \begin{figure*}[!h]
   \centering
-  \includegraphics[width=\linewidth]{fig/compare_smash.pdf}
+  \includegraphics[height=.95\textheight]{fig/compare_smash.pdf}
   \caption{Compare Smash.}
   \label{fig.compare.smash}
 \end{figure*}
