--- a/paper/main.tex
+++ b/paper/main.tex
@@ -395,17 +395,17 @@ This example shows the distinction between a finite-context model and a substitu
     % \textit{Ref}: 
     GGA18 & 11,373,140 & CM000110 & Aves & \textit{Gallus gallus} chromosome 18. \\
     % \textit{Tar}: 
-    MGA20 & 10,730,484 & CM000981 & Aves & \textit{Meleagris gallopavo} chromosome 20. \\
+    MGA20 & 10,730,484 & CM000981 & Aves & \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 20. \\
     \midrule
     % \textit{Ref}: 
     GGA14 & 16,219,308 & CM000106 & Aves & \textit{Gallus gallus} chromosome 14. \\
     % \textit{Tar}: 
-    MGA16 & 14,878,991 & CM000977 & Aves & \textit{Meleagris gallopavo} chromosome 16. \\
+    MGA16 & 14,878,991 & CM000977 & Aves & \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 16. \\
     \midrule
     % \textit{Ref}: 
-    ScVII & 1,090,940 & NC\_001139 & Fungi & \textit{Saccharomyces cerevisiae} S288C chromosome 7. \\
+    ScVII & 1,090,940 & NC\_001139 & Fungi & \textit{Saccharomyces cerevisiae} S288C chromosome VII. \\
     % \textit{Tar}: 
-    SpVII & 1,105,967 & CP020299 & Fungi & \textit{Saccharomyces paradoxus} strain UFRJ50816 chromosome 7. \\
+    SpVII & 1,105,967 & CP020299 & Fungi & \textit{Saccharomyces paradoxus} strain UFRJ50816 chromosome VII. \\
     \midrule
     Synthetic data \\
     \cmidrule{1-1}
