--- a/paper/main.tex
+++ b/paper/main.tex
@@ -377,67 +377,45 @@ This example shows the distinction between a finite-context model and a substitu
 \begin{table*}[h]
   \caption{Dataset used in the experiments.}
   \label{tab.dataset.real}
-  \begin{tabularx}{\linewidth}{l@{}rllX}
+  \begin{tabularx}{\linewidth}{llrX}
     \toprule
-    Sequence & Length (base) & Accession & Group & Description \\
-    % Sequence & \multicolumn{1}{l}{Length} & Accession & Kingdom & Description \\
-    %  & \multicolumn{1}{l}{(base)} &  &  & \\
+    Sequence & Group & Length (base) & Description \\
     \midrule
-    Real data \\
-    \cmidrule{1-1}
-    % \textit{Ref}: 
-    PXO99A & 5,238,555 & CP000967 & Bacteria & \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} causes the major disease of bacterial blight of rice (\textit{Oryza sativa L.}). 
+    PXO99A & Bacteria & 5,238,555 & CP000967 -- \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} causes the major disease of bacterial blight of rice (\textit{Oryza sativa L.}). 
     % \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} PXO99A strain is a 5-azacytidine-resistant derivative of PXO99, which was isolated in Los Baños and classified as Philippine race 6. 
     \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} PXO99A strain is virulent toward a large number of rice varieties representing diverse genetic sources of resistance~\cite{salzberg2008genome}. \\
-    % \textit{Tar}: 
-    MAFF 311018 & 4,940,217 & AP008229 & Bacteria & \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} MAFF~311018 is a Japanese race 1 strain~\cite{ochiai2005genome}. \\
+    MAFF 311018 & Bacteria & 4,940,217 & AP008229 -- \textit{Xanthomonas oryzae}~pv.~\textit{oryzae} MAFF~311018 is a Japanese race 1 strain~\cite{ochiai2005genome}. \\
     \midrule
-    % \textit{Ref}: 
-    GGA18 & 11,373,140 & CM000110 & Aves & \textit{Gallus gallus} chromosome 18. \\
-    % \textit{Tar}: 
-    MGA20 & 10,730,484 & CM000981 & Aves & \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 20. \\
+    GGA18 & Aves & 11,373,140 & CM000110 -- \textit{Gallus gallus} chromosome 18. \\
+    MGA20 & Aves & 10,730,484 & CM000981 -- \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 20. \\
     \midrule
-    % \textit{Ref}: 
-    GGA14 & 16,219,308 & CM000106 & Aves & \textit{Gallus gallus} chromosome 14. \\
-    % \textit{Tar}: 
-    MGA16 & 14,878,991 & CM000977 & Aves & \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 16. \\
+    GGA14 & Aves & 16,219,308 & CM000106 -- \textit{Gallus gallus} chromosome 14. \\
+    MGA16 & Aves & 14,878,991 & CM000977 -- \textit{Meleagris gallopavo} isolate NT-WF06-2002-E0010 breed Aviagen turkey brand Nicholas breeding stock chromosome 16. \\
     \midrule
-    % \textit{Ref}: 
-    ScVII & 1,090,940 & NC\_001139 & Fungi & \textit{Saccharomyces cerevisiae} S288C chromosome VII. \\
-    % \textit{Tar}: 
-    SpVII & 1,105,967 & CP020299 & Fungi & \textit{Saccharomyces paradoxus} strain UFRJ50816 chromosome VII. \\
+    HS12 & Mammalia & 133,275,309 & NC\_000012 -- \textit{Homo sapiens} chromosome 12, GRCh38.p13 Primary Assembly. \\
+    PT12 & Mammalia & 130,995,916 & NC\_036891 -- \textit{Pan troglodytes} isolate Yerkes chimp pedigree \#C0471 (Clint) chromosome~12. \\
     \midrule
-    Synthetic data \\
+    ScVII & Fungi & 1,090,940 & NC\_001139 -- \textit{Saccharomyces cerevisiae} S288C chromosome VII. \\
+    SpVII & Fungi & 1,105,967 & CP020299 -- \textit{Saccharomyces paradoxus} strain UFRJ50816 chromosome VII. \\
+    \midrule
     \cmidrule{1-1}
-    % \textit{Ref}: 
-    RefS & 1,500 & -- & -- & It consists of three segments of 500~base size. \\
-    % \textit{Tar}: 
-    TarS & 1,500 & -- & -- & To build TarS, segment~I is mutated~2\%, II is inversely repeated and III is duplicated. \\
+    RefS & Synthetic & 1,500 & It consists of three segments of 500~base size. \\
+    TarS & Synthetic & 1,500 & To build TarS, segment~I is mutated~2\%, II is inversely repeated and III is duplicated. \\
     \midrule
-    % \textit{Ref}: 
-    RefM & 100,000 & -- & -- & It has four segments of 25~kilobase size. \\
-    % \textit{Tar}: 
-    TarM & 100,000 & -- & -- & For building TarM, segment~I of RefM (out of total~four) is inversely repeated, II is mutated~90\%, III is duplicated and IV is mutated~3\%. \\
+    RefM & Synthetic & 100,000 & It has four segments of 25~kilobase size. \\
+    TarM & Synthetic & 100,000 & For building TarM, segment~I of RefM (out of total~four) is inversely repeated, II is mutated~90\%, III is duplicated and IV is mutated~3\%. \\
     \midrule
-    % \textit{Ref}: 
-    RefL & 5,000,000 & -- & -- & It includes two segments, 2,500,000~bases each. \\
-    % \textit{Tar}: 
-    TarL & 5,000,000 & -- & -- & Segment~I is inversely repeated and II is mutated~2\% for building TarL. \\
+    RefL & Synthetic & 5,000,000 & It includes two segments, 2,500,000~bases each. \\
+    TarL & Synthetic & 5,000,000 & Segment~I is inversely repeated and II is mutated~2\% for building TarL. \\
     \midrule
-    % \textit{Ref}: 
-    RefXL & 100,000,000 & -- & -- & It is made of four segments, 25,000,000~bases each. \\
-    % \textit{Tar}: 
-    TarXL & 100,000,000 & -- & -- & Segment~I is mutated~1\%, segments~II and III are inversely repeated and segment~IV is duplicated to make TarXL. \\
+    RefXL & Synthetic & 100,000,000 & It is made of four segments, 25,000,000~bases each. \\
+    TarXL & Synthetic & 100,000,000 & Segment~I is mutated~1\%, segments~II and III are inversely repeated and segment~IV is duplicated to make TarXL. \\
     \midrule
-    % \textit{Ref}: 
-    RefMut & 60,000 & -- & -- & It includes 60 segments of 1~kilobase size. \\
-    % \textit{Tar}: 
-    TarMut & 60,000 & -- & -- & To build TarMut, the first segment~(I) is mutated~1\%, the second segment is mutated~2\%, the third one is mutated~3\%, and so on. \\
+    RefMut & Synthetic & 60,000 & It includes 60 segments of 1~kilobase size. \\
+    TarMut & Synthetic & 60,000 & To build TarMut, the first segment~(I) is mutated~1\%, the second segment is mutated~2\%, the third one is mutated~3\%, and so on. \\
     \midrule
-    % \textit{Ref}: 
-    RefComp & 1,000,000 & -- & -- & It consists of 10 segments of 100~kilobases. \\
-    % \textit{Tar}: 
-    TarComp & 1,000,000 & -- & -- & For building it, the first segment~(I) of RefComp is duplicated, the second, third and fourth segments are mutated~1\%, 2\% and 3\%, respectively. The segments~V, VI and VII of RefComp are inversely repeated, then mutated 4\%, 5\% and 6\%, respectively. Finally, the segments VIII, IX and X are mutated 7\%, 8\% and 9\%, respectively. \\
+    RefComp & Synthetic & 1,000,000 & It consists of 10 segments of 100~kilobases. \\
+    TarComp & Synthetic & 1,000,000 & For building it, the first segment~(I) of RefComp is duplicated, the second, third and fourth segments are mutated~1\%, 2\% and 3\%, respectively. The segments~V, VI and VII of RefComp are inversely repeated, then mutated 4\%, 5\% and 6\%, respectively. Finally, the segments VIII, IX and X are mutated 7\%, 8\% and 9\%, respectively. \\
     \bottomrule
   \end{tabularx}
 
