--- a/paper/main.tex
+++ b/paper/main.tex
@@ -149,7 +149,7 @@ Smash++ works on the basis of cooperation between finite-context models (FCMs) a
 \begin{figure}[!t]
   \centering
   \includegraphics[width=\columnwidth]{fig/data_model.pdf}
-  \caption{Data modelling by Smash++. (a) cooperation between finite-context models (FCMs) and substitutional-tolerant Markov models (STMMs). Note that each STMM needs to be associated with an FCM. (b) probability of an input symbol is estimated by employing the probability and weight values that have been obtained from processing previous symbols.}
+  \caption{Data model used by Smash++. (a) cooperation between finite-context models (FCMs) and substitutional-tolerant Markov models (STMMs). Note that each STMM needs to be associated with an FCM. (b) probability of an input symbol is estimated by employing the probability and weight values that have been obtained from processing previous symbols.}
   \label{fig.model}
 \end{figure}
 
