--- a/paper/main.tex
+++ b/paper/main.tex
@@ -520,7 +520,7 @@ The authors declare that they have no competing interests.
 
 
 \subsection{Funding}
-This work was supported by Programa Operacional Factores de Competitividade -- COMPETE (FEDER); and by national funds through the Foundation for Science and Technology (FCT), in the context of the projects [UID/CEC/00127/2013, PTCD/EEI-SII/6608/2014] and the grant [PD/BD/113969/2015].
+This work was supported by Programa Operacional Factores de Competitividade -- COMPETE (FEDER); and by national funds through the Foundation for Science and Technology (FCT), in the context of the projects [UID/CEC/00127/2014, PTCD/EEI-SII/6608/2014] and the grants [PD/BD/113969/2015, UID/CEC/00127/2019].
 
 
 \subsection{Author's Contributions}
