--- a/paper/main.tex
+++ b/paper/main.tex
@@ -452,9 +452,9 @@ Smash++ and several other methods have been carried out on a collection of synth
 Figure~\ref{fig.PXO99A.MAFF311018} conforms to \cite{salzberg2008genome}
 \begin{figure*}[!h]
   \centering
-  \includegraphics[width=\linewidth]{fig/PXO99A_MAFF311018.pdf}
-  \caption{PXO99A - MAFF 311018.}
-  \label{fig.PXO99A.MAFF311018}
+  \includegraphics[width=\linewidth]{fig/real.pdf}
+  \caption{real.}
+  \label{fig.real}
 \end{figure*}
 
 
