--- a/paper/main.tex
+++ b/paper/main.tex
@@ -445,7 +445,7 @@ Smash++ and several other methods have been carried out on a collection of synth
 \begin{figure*}[!h]
   \centering
   \includegraphics[width=\linewidth]{fig/synth.pdf}
-  \caption{synthetic.}
+  \caption{synthetic. (a); (b); (c); (d); (e).}
   \label{fig.synth}
 \end{figure*}
 
@@ -453,7 +453,7 @@ Figure~\ref{fig.PXO99A.MAFF311018} conforms to \cite{salzberg2008genome}
 \begin{figure*}[!h]
   \centering
   \includegraphics[width=\linewidth]{fig/real.pdf}
-  \caption{real.}
+  \caption{real. (a); (b); (c); (d).}
   \label{fig.real}
 \end{figure*}
 
