--- a/paper/supp/ref.bib
+++ b/paper/supp/ref.bib
@@ -207,6 +207,17 @@ issn="1573-756X",
 doi="10.1007/s10618-006-0057-3"
 }
 
+@article{salzberg2008genome,
+  title={Genome sequence and rapid evolution of the rice pathogen \textit{Xanthomonas oryzae} pv. \textit{oryzae} PXO99A},
+  author={Salzberg, Steven L and Sommer, Daniel D and Schatz, Michael C and Phillippy, Adam M and Rabinowicz, Pablo D and Tsuge, Seiji and Furutani, Ayako and Ochiai, Hirokazu and Delcher, Arthur L and Kelley, David and others},
+  journal={BMC genomics},
+  volume={9},
+  number={1},
+  pages={204},
+  year={2008},
+  publisher={BioMed Central}
+}
+
 
 
 
