--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -1,3 +1,70 @@
+%\documentclass[a4paper,
+%%twocolumn
+%]{article}
+\documentclass[a4paper,9pt]{extarticle}
+
+%%%%  Math
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
+\newcommand*{\argminl}{\argmin\limits}
+\newcommand*{\argmaxl}{\argmax\limits}
+
+%%%%  Page margins
+\usepackage{geometry}
+%\geometry{left=25mm, right=20mm, top=30mm, bottom=20mm}
+%\geometry{left=32mm, right=29mm, top=35mm, bottom=23mm}
+\geometry{left=36mm, right=32mm, top=35mm, bottom=30mm}
+%\geometry{left=15mm, right=15mm, top=25mm, bottom=20mm}
+%\setlength{\columnsep}{4.5mm}
+
+%%%% Configuration file for plotting
+\input{cfg.tex}
+
+%%%%  Headers and footers
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\renewcommand{\sectionmark}[1]{\markright{Note~\thesection. #1}}
+\renewcommand{\subsectionmark}[1]{\markright{\thesubsection. #1}}
+\fancyhead{}    % clear all header fields
+\fancyfoot{}    % clear all footer fields
+\fancyhead[L]{\textsf{\nouppercase\rightmark}}
+\fancyhead[R]{\thepage}
+\setlength{\headsep}{20pt}
+
+
+\begin{document}
+
+%%% Title page
+\begin{titlepage}
+  \centering
+  \vspace*{10mm}
+  % \includegraphics[width=2.8cm]{logo.png} \\[10mm]
+  \Large\textsc{Supplementary Material for} \\[5mm]
+  \huge\textbf{Smash++: finding rearrangements} \\[12mm]
+  \Large Morteza Hosseini\textsuperscript{1}, Diogo Pratas\textsuperscript{1,2}, Armando J. Pinho\textsuperscript{1} \\[6mm]
+  \normalsize \textsuperscript{1}IEETA/DETI, University of Aveiro, Portugal \\[1mm]\textsuperscript{2}Department of Virology, University of Helsinki, Finland \\[4mm]
+  {\ttfamily\{seyedmorteza,pratas,ap\}@ua.pt}
+  
+  \vspace{\fill}
+  \thispagestyle{empty}
+  \raggedright
+  \setstretch{1.2}
+  \normalsize\tableofcontents
+\end{titlepage}
+
+\defaultLineSpace    		%%% Line spacing
+
+\clearpage
+\section{PXO99\textsuperscript{A} compared to MAFF}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=\linewidth]{fig/PXO99A_MAFF.png}
+  \caption{adopted from \cite{salzberg2008genome}.
+    Inversions and rearrangements in PXO99A compared to MAFF. The alignment shows regions of PXO99A that align to the same (red) or opposite (blue) strand of MAFF. Transposase genes and their orientation (+ or -) are shown at the sites of each rearrangement. Letters A-J indicate specific rearrangement events. A: the IS element ISXoo3 is composed of two distinct and independently conserved ORFs and is responsible for an inversion spanning coordinates 267869–5114959 (all coordinates refer to the PXO99A genome). B: ISXo8 occurs in opposite orientation at each end of a 2.6 Mbp inversion spanning positions 1356757–3898472. C: ISXo1 occurs in inverted copies at the endpoints of a 1.8 Mbp inversion spanning 1558996–3391786. D: a 33270 bp inverted region spanning 4394742–4428012 is flanked by oppositely-oriented copies of ISXo8. E: Each copy of the 212-kb duplication is flanked by ISXo5, which also occurs adjacent to two other translocations in this region. The duplication appears as two parallel diagonal lines in this box. F: ISXo8 also occurs in inverted copies at the boundaries of a 47540 bp segment that is translocated from approximately 4800000 to 685272. G: ISXoo3 flanks both ends of a 47540 bp translocation from approximately 1117000 to 4339239. H: A 9,862 bp region occurs in inverted copies at 217,455 and 4,305,307. MAFF311018 contains only one copy of this region. I,J: Segments spanning 96,753 bp (I) and 17,021 bp (J) are inverted with respect to MAFF311018 but not associated with transposases.}
+  % \label{fig.schema}
+\end{figure}
+
 \clearpage
 \section{Tool availability and implementation}
 \label{sec.tool}
@@ -66,13 +133,11 @@ Various options are provided with the interface of the proposed tool, which are 
   Flag & Input & Description \\
   \midrule
   \multicolumn{3}{@{}l@{}}{\textit{Required}} \\
-  % \cmidrule{1-2}
   \mono{-r} & Seq/FASTA/FASTQ & Reference file. \\
   \mono{-t} & Seq/FASTA/FASTQ & Target file. \\
   && It is highly recommended to have short names. \\
   \midrule
   \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
-  % \cmidrule{1-2}
   \mono{-l} & Integer: $[0, 5]$\newline Default: 0 & Level of compression. \\
   \midrule
   \mono{-m} & Integer: $[1, 2^{32}-1]$\newline Default: 50 & Minimum segment size. Only those regions in the reference file that are bigger than this value would be able to be considered for compression. \\
@@ -156,7 +221,7 @@ Various options are provided with the interface of the proposed tool, which are 
 \end{align}
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=\linewidth]{filters.pdf}
+  \includegraphics[width=\linewidth]{fig/filters.pdf}
   \caption{Various windowing functions implemented and embedded in \smashpp.}
   \label{fig.filters}
 \end{figure}
@@ -205,11 +270,9 @@ The visualizer provides various options that are described in Table~\ref{tab.opt
     Flag & Input & Description \\
     \midrule
     \multicolumn{3}{@{}l@{}}{\textit{Required}} \\
-    \cmidrule{1-2}
     & *.pos file & Position file, generated by Smash++ tool. \\
     \midrule
     \multicolumn{3}{@{}l@{}}{\textit{Optional}} \\
-    \cmidrule{1-2}
     \mono{-o} & *.svg file\newline Default: map.svg & Output image name. \\
     \midrule
     \mono{-rn} & String & Reference name shown on output. \\
@@ -331,7 +394,17 @@ There is a 1000 byte reference sequence, named \mono{refs}, and a 1000 byte targ
 results in Fig.~\ref{fig.example}, which has been saved as ``map.svg''.
 
 \begin{figure}[!h]
-  \includegraphics[width=.95\linewidth]{example.pdf}
+  \includegraphics[width=.95\linewidth]{fig/example.pdf}
   \caption{An example of running \smashpp on two 1000 base sequences. Two similar regions in regular mode and two similar ones in inverted mode are detected.}
   \label{fig.example}
 \end{figure}
+
+\clearpage
+%\balance
+\refLineSpace    %%% Line spacing
+\small
+\addcontentsline{toc}{section}{\:\textbf{References}}
+\bibliographystyle{IEEEtran}
+\bibliography{ref}
+
+\end{document}
