--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -56,6 +56,15 @@
 \defaultLineSpace    		%%% Line spacing
 
 \clearpage
+\section{GGA 18 compared to MGA 20}
+\begin{figure}[!h]
+  \centering
+  % \includegraphics[width=\linewidth]{fig/PXO99A_MAFF.png}
+  \caption{adopted from \cite{}.}
+  % \label{fig.schema}
+\end{figure}
+
+\clearpage
 \section{PXO99\textsuperscript{A} compared to MAFF}
 \begin{figure}[!h]
   \centering
