--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -59,13 +59,32 @@
 \section{GGA 18 compared to MGA 20}
 \begin{figure}[!h]
   \centering
-  \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
+  % \includegraphics[width=.85\linewidth]{fig/GGA18_MGA20.pdf}
   \caption{
   (a)
   ;
   (b)
   adopted from \cite{}.
   % FISH confirmation of the turkey-chicken inversion rearrangement due to apparent unequal recombination between NME1 and NME2 orthologs on GGA18/MGA20. CHORI-260 BACs 110F07 (GGA18 end coordinates: 4,850,650–5,056,016) and 112P09 (9,665,995–9,865,995) were labeled in green (FITC), while 96A17 (5,087,535–5,266,203) and 92G16 (9,980,713–10,142,396) were labeled with red (Enzo Red) and used for FISH analysis of chicken and turkey pachytene chromosomes, which are 14–20× more extended than mitotic metaphase chromosomes allowing for greater resolution. A view of GGA18 (left frame) affirms the arrangement predicted by the BES alignments noted above, 110F07 and 96A17 signals co-localize to generate a yellow signal halfway along the chromosome q arm, as do 112P09 and 92G16 near the q terminus. Whereas for MGA20 (right frame), the 110F07 and 112P09 BAC probes co-localize (green) as do the two red probes, indicative of the 5 Mb inversion. (Prior FISH experiments utilized the BAC probes singly or in pairs of two to ensure all probes hybridized equally well.) This inversion was previously indicated by inconsistent BAC mate pairs: CHORI-260 111D05 (5,106,305–10,099,832), 95I22 (5,109,664–10,107,855), 89F20 (5,134,762–10,035,123), 94C02 (5,157,115–10,042,702), and 95H13 (5,268,786–9,982,916) and 78TKNMI 18A07 (5,109,437–10,066,115), all of which had BES that aligned with the same strand in the chicken sequence, as expected for BACs that cross inversion breakpoints. Additional FISH, overgo mapping, and fingerprint analyses confirm the inversion and narrow the breakpoint regions to sites near the NME1 and NME2 orthologs (unpublished data)
+  ;
+  (c)
+  SynBrowser
+  ;
+  (d)
+  }
+  % \label{fig.schema}
+\end{figure}
+
+\clearpage
+\section{GGA 14 compared to MGA 16}
+\begin{figure}[!h]
+  \centering
+  % \includegraphics[width=.85\linewidth]{fig/GGA14_MGA16.pdf}
+  \caption{
+  (a)
+  ;
+  (b)
+  adopted from \cite{}.
   ;
   (c)
   SynBrowser
