--- a/paper/supp/supp.tex
+++ b/paper/supp/supp.tex
@@ -94,6 +94,26 @@
   % \label{fig.schema}
 \end{figure}
 
+
+\clearpage
+\section{HS 12 compared to PT 12}
+\begin{figure}[!h]
+  \centering
+  \includegraphics[width=.85\linewidth]{fig/HS12_PT12.pdf}
+  \caption{
+  (a)
+  ;
+  (b)
+  adopted from \cite{}.
+  ;
+  (c)
+  SynBrowser
+  ;
+  (d)
+  }
+  % \label{fig.schema}
+\end{figure}
+
 \clearpage
 \section{PXO99\textsuperscript{A} compared to MAFF 311018}
 \begin{figure}[!h]
