--- a/paper/supp/ref.bib
+++ b/paper/supp/ref.bib
@@ -1,3 +1,47 @@
+@article{darling2010progressivemauve,
+  title={progressiveMauve: multiple genome alignment with gene gain, loss and rearrangement},
+  author={Darling, Aaron E and Mau, Bob and Perna, Nicole T},
+  journal={PloS one},
+  volume={5},
+  number={6},
+  pages={e11147},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
+@article{zhang2011comparative,
+  title={A comparative physical map reveals the pattern of chromosomal evolution between the turkey (\textit{Meleagris gallopavo}) and chicken (\textit{Gallus gallus}) genomes},
+  author={Zhang, Yang and Zhang, Xiaojun and O'Hare, Thomas H and Payne, William S and Dong, Jennifer J and Scheuring, Chantel F and Zhang, Meiping and Huang, James J and Lee, Mi-Kyung and Delany, Mary E and others},
+  journal={BMC genomics},
+  volume={12},
+  number={1},
+  pages={447},
+  year={2011},
+  publisher={BioMed Central}
+}
+
+@article{lee2016synteny,
+  title={Synteny Portal: a web-based application portal for synteny block analysis},
+  author={Lee, Jongin and Hong, Woon-young and Cho, Minah and Sim, Mikang and Lee, Daehwan and Ko, Younhee and Kim, Jaebum},
+  journal={Nucleic acids research},
+  volume={44},
+  number={W1},
+  pages={W35--W40},
+  year={2016},
+  publisher={Oxford University Press}
+}
+
+@article{dalloul2010multi,
+  title={Multi-platform next-generation sequencing of the domestic turkey (\textit{Meleagris gallopavo}): genome assembly and analysis},
+  author={Dalloul, Rami A and Long, Julie A and Zimin, Aleksey V and Aslam, Luqman and Beal, Kathryn and Blomberg, Le Ann and Bouffard, Pascal and Burt, David W and Crasta, Oswald and Crooijmans, Richard PMA and others},
+  journal={PLoS biology},
+  volume={8},
+  number={9},
+  pages={e1000475},
+  year={2010},
+  publisher={Public Library of Science}
+}
+
 @online{web-smashpp,
   title={Smash++},
   author={Hosseini, Morteza and Pratas, Diogo and Pinho, Armando J},
